<resources>
    <string name="placeholder">placeholder</string>

    <string name="app_name">Valenbisi</string>
    <string name="number_label">Número:</string>
    <string name="partes_label">Partes:</string>

    <string name="DetalleParada_data">Datos</string>
    <string name="DetalleParada_incidents">Incidencias</string>

    <string name="DetalleParada_address">Dirección:</string>
    <string name="DetalleParada_total">Total:</string>
    <string name="DetalleParada_available">Disponibles:</string>
    <string name="DetalleParada_free">Libres:</string>
    <string name="DetalleParada_coords">Coordenadas:</string>
    <string name="DetalleParada_no_hay_data">No hay datos</string>

    <string name="DetalleParte_title_new">Nuevo parte</string>
    <string name="DetalleParte_title_update">Actualizar parte</string>
    <string name="DetalleParte_subject">Asunto:</string>
    <string name="DetalleParte_description">Descripción:</string>
    <string name="DetalleParte_status">Estado:</string>
    <string name="DetalleParte_type">Tipo:</string>

    <string name="DetalleParte_creation_success">Se ha creado un nuevo parte</string>
    <string name="DetalleParte_creation_error_empty_name">El nombre no puede ser nulo.</string>
    <string name="DetalleParte_creation_error_db">Error en la base de datos: no se puede crear el parte.</string>
    <string name="DetalleParte_creation_deleted">Cancelado</string>
    <string name="DetalleParte_update_success">Se ha actualizado el parte.</string>
    <string name="DetalleParte_update_error_db">Error en la base de datos. No se puede actualizar el parte.</string>
    <string name="DetalleParte_delete_success">Se ha borrado el parte.</string>
<<<<<<< HEAD
    <string name="DetalleParte_delete_error_db">Error en la base de datos. No se puede eliminar el parte.</string>
    <string name="img_content_desc_add_incident">Nuevo parte</string>
=======
    <string name="DetalleParte_delete_error_db">Error de base de datos. No se puede borrar el parte.</string>
    <string name="DetalleParte_status_open">Abierto</string>
    <string name="DetalleParte_status_in_progress">Procesando</string>
    <string name="DetalleParte_status_closed">Cerrado</string>
    <string name="DetalleParte_type_mecanical">Mecánico</string>
    <string name="DetalleParte_type_electrical">Eléctrico</string>
    <string name="DetalleParte_type_painting">Pintura</string>
    <string name="DetalleParte_type_construction">Albañilería</string>
    <string name="img_content_desc_add_incident">Nuevo Parte</string>
>>>>>>> a8dcb402c2164509a0797e60322031c9a6a4ceee
    <string name="img_content_desc_open_map">Abrir mapa</string>


</resources>
