<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle_parada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fabianleven.cristianmilapallas.valenbisi.DetalleParada">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="?android:attr/textColorPrimary" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="6"
            >

            <TextView
                android:text="@string/number_label"
                android:layout_row="0"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/detalle_number"
                android:layout_column="1"
                android:layout_row="0"/>

            <TextView
                android:text="@string/DetalleParada_address"
                android:layout_row="1"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/detalle_address"
                android:layout_column="1"
                android:layout_row="1"/>

            <TextView
                android:text="@string/DetalleParada_total"
                android:layout_row="2"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/detalle_total"
                android:layout_column="1"
                android:layout_row="2"/>

            <TextView
                android:text="@string/DetalleParada_available"
                android:layout_row="3"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/detalle_available"
                android:layout_column="1"
                android:layout_row="3"/>

            <TextView
                android:text="@string/DetalleParada_free"
                android:layout_row="4"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/detalle_freeslots"
                android:layout_column="1"
                android:layout_row="4"/>

            <TextView
                android:text="@string/DetalleParada_coords"
                android:layout_row="5"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/detalle_coordinates"
                android:layout_column="1"
                android:layout_row="5"/>

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Incidencias"
            android:textSize="30sp"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

</RelativeLayout>
